Closed
Bug 364518
Opened 19 years ago
Closed 19 years ago
mouse scroll wheel stopped working since Fx 2.0.0.1
Categories
(Core :: Widget: Win32, defect)
Tracking
()
VERIFIED
FIXED
People
(Reporter: garou1401, Assigned: masayuki)
References
Details
(Keywords: regression, verified1.8.1.2)
Attachments
(1 file, 1 obsolete file)
|
1.51 KB,
patch
|
masayuki
:
review+
roc
:
superreview+
jay
:
approval1.8.1.2+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.1; fr; rv:1.8.1.1) Gecko/20061204 Firefox/2.0.0.1
Build Identifier: Mozilla/5.0 (Windows; U; Windows NT 5.1; fr; rv:1.8.1.1) Gecko/20061204 Firefox/2.0.0.1
i have installed the update and i have now the version 2.0.0.1 but now i can't use the wheel of my mouse anymore ! ! ! have an explanation for this problem because the wheel of my mouse is already operationnal when i use internet explorer or avant browser ? ? ?
Reproducible: Always
Comment 1•19 years ago
|
||
Comment 2•19 years ago
|
||
*** Bug 364630 has been marked as a duplicate of this bug. ***
Comment 3•19 years ago
|
||
*** Bug 364658 has been marked as a duplicate of this bug. ***
Comment 4•19 years ago
|
||
I believe this is a regression from bug 347875.
Blocks: 347875
Keywords: regression
Updated•19 years ago
|
Status: UNCONFIRMED → NEW
Component: General → Widget: Win32
Ever confirmed: true
Product: Firefox → Core
Summary: mouse wheel → mouse wheel stopped working since Fx 2.0.0.1
Version: unspecified → Trunk
| Assignee | ||
Comment 5•19 years ago
|
||
What mouse driver has this bug?
And can you test with trunk build?
| Assignee | ||
Comment 6•19 years ago
|
||
taking. I'll attach the patch. The problem may happen only with legacy message.
| Assignee | ||
Comment 7•19 years ago
|
||
I think that this patch fixes this bug. But I don't have the moues.
And trunk build has dropped the support of the legacy message, should we recover the support on trunk too?
Attachment #249504 -
Flags: review?(emaijala)
| Assignee | ||
Updated•19 years ago
|
Status: NEW → ASSIGNED
Updated•19 years ago
|
QA Contact: general → win32
| Assignee | ||
Comment 8•19 years ago
|
||
Kimura-san said in bugzilla-jp:
"Probably, if we don't process the legacy message, the mouse drivers use WM_MOUSEWHEEL intead of it. Therefore, we don't have the regression reports on trunk build."
I agree to this.
| Assignee | ||
Updated•19 years ago
|
Flags: blocking1.8.1.2?
Updated•19 years ago
|
Flags: blocking1.8.1.2? → blocking1.8.1.2+
Comment 10•19 years ago
|
||
Comment on attachment 249504 [details] [diff] [review]
Patch rv1.0
Can someone verify this patch works?
What legacy message do you mean and where in the patch for bug 347875 was it dropped?
| Assignee | ||
Comment 11•19 years ago
|
||
(In reply to comment #10)
> (From update of attachment 249504 [details] [diff] [review])
> Can someone verify this patch works?
I don't have the mouse :-(
> What legacy message do you mean and where in the patch for bug 347875 was it
> dropped?
No, it has dropped at bug 330276.
attachment 216511 [details] [diff] [review]:
> -#if !defined (__MINGW32__) && !defined(WINCE)
> - if (!nsWindow::uMSH_MOUSEWHEEL)
> - nsWindow::uMSH_MOUSEWHEEL = RegisterWindowMessage(MSH_MOUSEWHEEL);
> -#endif
> -
Comment 12•19 years ago
|
||
Ok, nasty side-effects of a seemingly valid change. Could you try to find someone who could verify the change, please? I can't test it either.
| Assignee | ||
Comment 13•19 years ago
|
||
I uploaded the patched build in my server. Can you test the build, dominique Carturan or anybody?
http://www.d-toybox.com/mozilla/testbuilds/bug364518.zip
| Assignee | ||
Comment 14•19 years ago
|
||
Ere:
http://forums.mozillazine.org/viewtopic.php?t=501574&postdays=0&postorder=asc&postsperpage=15&start=15&sid=81bab3df202a5b97ce91fe6246561ad9
I get the feedback in Mozillazine forum. He said the patched build works fine.
Comment 15•19 years ago
|
||
Comment on attachment 249504 [details] [diff] [review]
Patch rv1.0
Ok, good. r=emaijala
Attachment #249504 -
Flags: review?(emaijala) → review+
| Assignee | ||
Comment 16•19 years ago
|
||
Comment on attachment 249504 [details] [diff] [review]
Patch rv1.0
Thank you, Ere.
Roc, would you check for sr?
Attachment #249504 -
Flags: superreview?(roc)
Could you slightly simplify this by setting
int verticalAmount = msg == WM_MOUSEWHEEL ? (short) HIWORD (wParam) : (int) wParam;
above "if (ulScrollLines == WHEEL_PAGESCROLL)", and then using it in both cases?
| Assignee | ||
Comment 18•19 years ago
|
||
Attachment #249504 -
Attachment is obsolete: true
Attachment #250583 -
Flags: superreview?(roc)
Attachment #250583 -
Flags: review+
Attachment #249504 -
Flags: superreview?(roc)
| Assignee | ||
Comment 19•19 years ago
|
||
Roc:
Would you continue to sr?
Attachment #250583 -
Flags: superreview?(roc) → superreview+
| Assignee | ||
Comment 20•19 years ago
|
||
Comment on attachment 250583 [details] [diff] [review]
Patch rv1.1
This patch is only needed by 1.8 branch.
Attachment #250583 -
Flags: approval1.8.1.2?
Comment 21•19 years ago
|
||
Comment on attachment 250583 [details] [diff] [review]
Patch rv1.1
Approved for 1.8 branch, a=jay for drivers.
Attachment #250583 -
Flags: approval1.8.1.2? → approval1.8.1.2+
| Assignee | ||
Comment 22•19 years ago
|
||
checked-in.
Would somebody verify in nightly builds?
| Assignee | ||
Comment 23•19 years ago
|
||
Now, available the nightly builds:
http://ftp.mozilla.org/pub/mozilla.org/firefox/nightly/latest-mozilla1.8/
# after 10, Jan.
Would you verify the fix?
Comment 24•19 years ago
|
||
Dont have the mouse driver for the mouse listed here. But i installed the build from the link above and verified my kensington wireless mouse scrollwheel works fine.
Status: RESOLVED → VERIFIED
| Assignee | ||
Comment 25•19 years ago
|
||
I get the feedback from Japanese tester.
-> v1.8.1.2.
Keywords: fixed1.8.1.2 → verified1.8.1.2
Updated•19 years ago
|
Summary: mouse wheel stopped working since Fx 2.0.0.1 → mouse scroll wheel stopped working since Fx 2.0.0.1
You need to log in
before you can comment on or make changes to this bug.
Description
•