Bug 364518 mouse wheel stopped working since Fx 2.0.0.1 r=ere, sr=roc, a=jay